<resources>

    <string name="app_name">AlarmWorkflow App</string>
    <string name="menu_refresh">Aktualisieren</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="title_activity_main">AlarmWorkflow App</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_operationdetail">Einsatzinformationen</string>
    <string name="pref_server_category_title">AlarmWorkflow-Server</string>
	<string name="pref_misc_category_title">Sonstiges</string>
    <string name="pref_summary_server_uri">Die Adresse Ihres AlarmWorkflow-Servers</string>
    <string name="pref_title_server_uri">Serveradresse</string>
    <string name="pref_default_server_uri">http://10.0.2.2:60002/</string>
    <string name="pref_title_update_interval">Aktualisierungsintervall</string>
    <string name="pref_summary_update_interval">Der Abstand in Minuten, wann auf neue Einsätze geprüft werden soll.</string>
    <string name="pref_default_update_interval">10</string>
    <string name="pref_title_fetch_amount">Einsatzlimit</string>
	<string name="pref_summary_fetch_amount">Anzahl der Einsätze, die max. zurückgegeben werden sollen.</string>
    <string name="pref_default_fetch_amount">5</string>
    <string name="pref_title_fetch_only_nonacknowledged">Nur Neue Einsätze</string>
	<string name="pref_summary_fetch_only_nonacknowledged">Ob nur nicht-erledigte (neue) Einsätze gesucht werden sollen.</string>
    <string name="pref_default_fetch_only_nonacknowledged">true</string>
    <string name="pref_title_fetch_max_age">Maximales Alter</string>
	<string name="pref_summary_fetch_max_age">Maximales Alter der Einsätze die gesucht werden sollen.</string>
    <string name="pref_default_fetch_max_age">7</string>
    <string name="pref_title_app_category">Anwendung</string>
    <string name="pref_title_app_version">Version</string>
    <string name="pref_summary_app_version">0.7.1.10</string>
    <string name="pref_title_server_username">Benutzername</string>
    <string name="pref_summary_server_username">Benutzername auf dem Server</string>
    <string name="pref_title_server_password">Passwort</string>
    <string name="pref_summary_server_password">Passwort für Authentifizierung</string>
   
    <string-array name="array_values_human_update_interval">
        <item>1 Minute</item>
        <item>5 Minuten</item>
        <item>10 Minuten</item>
        <item>30 Minuten</item>
        <item>1 Stunde</item>
        <item>4 Stunden</item>
        <item>12 Stunden</item>
        <item>24 Stunden</item>
    </string-array>
    <string-array name="array_values_android_update_interval">
        <item>1</item>
        <item>5 </item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>240</item>
        <item>720</item>
        <item>1440</item>
    </string-array>
    <string-array name="array_values_human_fetch_amount">
        <item>1 Einsatz</item>
        <item>3 Einsätze</item>
        <item>5 Einsätze</item>
        <item>10 Einsätze</item>
    </string-array>
    <string-array name="array_values_android_fetch_amount">
        <item>1</item>
        <item>3 </item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="array_values_human_fetch_max_age">
        <item>1 Tag</item>
        <item>7 Tage</item>
        <item>14 Tage</item>
        <item>30 Tage</item>
    </string-array>
    <string-array name="array_values_android_fetch_max_age">
        <item>1</item>
        <item>7 </item>
        <item>14</item>
        <item>30</item>
    </string-array>

    <string name="text_lblHeader">Einsätze:</string>
    <string name="toast_no_network_connection">Sie sind nicht mit dem Internet verbunden!</string>
    <string name="toast_fetching_operations_timed_out">Zeitüberschreitung! Bitte versuchen Sie es erneut!</string>
    <string name="text_details_operationnumber">Einsatznummer:</string>
    <string name="text_details_operationnumberdefault">(Einsatznummer nicht gefunden)</string>
    <string name="text_details_timestamp">Uhrzeit:</string>
    <string name="text_details_timestampdefault">(Keine Uhrzeit vorhanden)</string>
    <string name="text_details_keyword">Stichwort:</string>
    <string name="text_details_keyworddefault">(Kein Stichwort vorhanden)</string>
    <string name="text_details_comment">Bemerkung:</string>
    <string name="text_details_commentdefault">(Keine Bemerkung vorhanden)</string>
    <string name="text_details_destination">Einsatzort:</string>
    <string name="text_details_destinationdefault">(Kein Einsatzort vorhanden)</string>
    <string name="toast_error_persisting_cache">Error while persisting cache! Please contact the developers!</string>

</resources>