<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DefaultTopMargin"
        android:text="@string/text_details_operationnumber" />
    
    <TextView
        android:id="@+id/txtOperationNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_details_operationnumberdefault"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DefaultTopMargin"
        android:text="@string/text_details_timestamp" />

    <TextView
        android:id="@+id/txtTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_details_timestampdefault"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LargeSeparatingTopMargin"
        android:text="@string/text_details_keyword" />

    <TextView
        android:id="@+id/txtKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_details_keyworddefault"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DefaultTopMargin"
        android:text="@string/text_details_comment" />

    <TextView
        android:id="@+id/txtComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_details_commentdefault"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LargeSeparatingTopMargin"
        android:text="@string/text_details_destination" />

    <TextView
        android:id="@+id/txtDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_details_destinationdefault"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>